# gemini-img-gen-MCP

./: .gitignore  .mcp-config.json.example  README.md  pyproject.toml  requirements.txt  server.py  test.py
image_gen/: pyproject.toml
